# original-bitcoin

./: CMakeLists.txt
src/: base58.h  main.cpp  main.h  script.cpp  serialize.h  uint256.h
